<resources>
    <string name="app_name"> App Museos - Cano - Pacha </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="iniciar_sesion">Iniciar sesión</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Juan Carlos</string>
    <string name="nav_header_subtitle">juan.carlos@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home"><span style="color: #000000"> Home </span></string>
    <string name="menu_ayuda">Ayuda</string>
    <string name="menu_cerrarSesion">Cerrar Sesión</string>
    <string name="menu_conf">Configuración</string>
    <string name="menu_perfil">Perfil</string>
    <string name="text_opc_log">Debes ingresar o registrarte para\n poder usar la app!</string>
    <string name="txt_ingresar">Ingresar</string>
    <string name="txt_registrarse">Registrarse</string>
    <string name="txt_bienvenido_app">Bienvenido a la app de museos</string>
    <string name="hint_usuario_edit">Nombre de usuario</string>
    <string name="hint_contra_edit">Contraseña</string>
    <string name="txt_olvidaste">Olvidaste tu contraseña?</string>
    <string name="txt_recuperar_contra">Recuperar contraseña</string>
    <string name="hint_email_edit">Email</string>
    <string name="txt_recuperar_btn">Recuperar</string>
    <string name="hint_nombre">Nombre y Apellido</string>
    <string name="txt_bienvenido">Bienvenid@</string>
    <string name="txt_muchos_museos">Te esperan muchos museos\npor conocer!</string>
    <string name="escaner_qr">Escáner QR</string>
    <string name="txt_result_qr">Esta aeronave (matricula C-709) llegó al país a partir de 1983, provenientes de Israel, donde originalmente operaron en la Fuerza Aérea Israelí bajo la denominación “Shahak” (MIIICJ). La mayoría de estas aeronaves intervinieron en el conflicto o guerra de Yom Kipur, también conocida como guerra del Ramadán o guerra de Octubre. Posteriormente operaron por un tiempo en la X Brigada Aérea con asiento en Rio Gallegos, donde nació el Escuadrón ”Guerreros del Hielo”. Poco tiempo después fueron reemplazados en esta misma Unidad por los aviones que nuestro País había adquirido a la República del Perú en 1982, los MIRAGE-VP. De esta forma todos los MIRAGE III CJ, pasaron a prestar servicios en la IV Brigada Aérea con asiento en MENDOZA, Cuna de la Aviación de CAZA.</string>
    <string name="txt_titulo_resulqr">Mirage IIICJ</string>
    <string name="btn_escanear_qr">Escanear QR</string>
    <string name="btn_ver_contenido">Ver contenido</string>
    <string name="txt_favoritos">Favoritos</string>
    <string name="titulo_item_fav">La Giaconda</string>
    <string name="txt_descrip_item_fav">El Retrato de Lisa Gherardini, esposa de Francesco del Giocondo, ​ más conocido como La Gioconda o La Mona Lisa, es una obra pictórica del polímata renacentista italiano Leonardo da Vinci.</string>
    <string name="txt_enviar_sugerencia">Enviar sugerencia</string>
    <string name="qu_te_diviertas">¡Qué te diviertas!</string>
    <string name="version">Versión 1.0.0</string>
    <string name="apellidos">Cano, Pacha</string>
    <string name="juan_carlos">Juan Carlos</string>
    <string name="qrs_favoritos">Número de favoritos</string>
    <string name="_8">8</string>
    <string name="total_qrs">Total QRs</string>
    <string name="_21">21</string>
    <string name="compartir_mi_perfil">Compartir mi perfil</string>
    <string name="cerrando_sesion">Cerrando sesión!</string>
    <string name="nombre">Nombre</string>
    <string name="nombre_usuario">Jcarlos1</string>
    <string name="mail">Correo electrónico</string>
    <string name="mail2">jcarlos1@gmail.com</string>
    <string name="hint_asterisco">******************</string>
    <string name="guardar">Guardar</string>
    <string name="usuario">Nombre de usuario</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="favoritos">Favoritos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="StringDescListado">Esta obra de arte se encuentra en la sala:</string>
    <string name="room_name">Room_name</string>
    <string name="listado">Listado</string>
    <string name="sala">Sala:</string>
    <string name="salA">SALA #</string>
    <string name="tags">Tags:</string>
    <string name="descripci_n">Descripción:</string>
    <string name="video">Video:</string>
    <string name="latitud">Latitud:</string>
    <string name="longitud">Longitud:</string>
    <string name="tag1_tag2_tag3">TAG1, TAG2, TAG3</string>
    <string name="descripcion_extendida">DESCRIPCION EXTENDIDA</string>
    <string name="link">LINK</string>
    <string name="links_externos">Links externos:</string>
    <string name="_1515">1515</string>
    <string name="guion_medio">-</string>
    <string name="imagen_museo">Imagen museo</string>
    <string name="username">username</string>
    <string name="logo_iua">Logo IUA</string>
    <string name="Descripcion_ayuda">Esta aplicación fue desarrollada en el marco de la materia Tecnologías Móviles. Con ella podrás escanear códigos QR de los diferentes museos.</string>
    <string name="imagen_qr">Imagen QR</string>
    <string name="contrase_a">Contraseña</string>
</resources>