<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_perfil_alt_24"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/nav_conf"
            android:icon="@drawable/ic_settings_24"
            android:title="@string/menu_conf" />
        <item
            android:id="@+id/nav_ayuda"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/menu_ayuda" />
        <item
            android:id="@+id/nav_cerrar_sesion"
            android:icon="@drawable/ic_cerrar_sesion_24"
            android:title="@string/menu_cerrarSesion" />
    </group>
</menu>