<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_conf"
        android:name="com.tecno_moviles.museo_cano_pacha.ui.home.HomeFragment"
        android:label="@string/menu_configuracion"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.tecno_moviles.museo_cano_pacha.ui.gallery.GalleryFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_ayuda"
        android:name="com.tecno_moviles.museo_cano_pacha.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_ayuda"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_cerrarSesion"
        android:name="com.tecno_moviles.museo_cano_pacha.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_cerrarSesion"
        tools:layout="@layout/fragment_slideshow" />
</navigation>