<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/backgr">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_card_login"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/dim_20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/george_semibold"
            android:text="@string/text_opc_log"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/dim_18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_20dp"
            android:layout_marginBottom="@dimen/dim_5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnIrLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dim_20dp"
                android:background="@drawable/rounded_btn"
                android:drawableEnd="@drawable/ic_arrow_right"
                android:drawablePadding="@dimen/dim_10dp"
                android:fontFamily="@font/george_semibold"
                android:paddingStart="@dimen/dim_15dp"
                android:paddingEnd="@dimen/dim_10dp"
                android:text="@string/txt_ingresar"
                android:textColor="@color/white"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnIrRegistrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_btn"
                android:drawableEnd="@drawable/ic_arrow_right"
                android:drawablePadding="@dimen/dim_10dp"
                android:fontFamily="@font/george_semibold"
                android:paddingStart="@dimen/dim_15dp"
                android:paddingEnd="@dimen/dim_10dp"
                android:text="@string/txt_registrarse"
                android:textColor="@color/white"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>