<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <com.androidnetworking.widget.ANImageView
        android:id="@+id/imgItemList"
        android:layout_width="@dimen/dim_80dp"
        android:layout_height="@dimen/dim_80dp"
        android:layout_marginStart="@dimen/dim_10dp"


        android:background="@drawable/circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    <View-->
<!--        android:id="@+id/backItem"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="@dimen/dim_100dp"-->
<!--        android:background="@color/transparente"-->
<!--        android:translationZ="@dimen/dim_5dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/dim_80dp"
        android:layout_marginTop="@dimen/dim_10dp"
        android:layout_marginBottom="@dimen/dim_10dp"
        android:layout_marginStart="@dimen/dim_100dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tituloLista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/george_bold"
            android:text="@string/titulo_item_fav"
            android:textColor="@color/black"
            android:textSize="@dimen/dim_20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey" />

        <TextView
            android:id="@+id/descripItemFavo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/StringDescListado" />

        <TextView
            android:id="@+id/roomName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/room_name"

            android:textAlignment="center"/>

    </LinearLayout>

    <View
        android:id="@+id/viewFlecha"
        android:layout_width="@dimen/dim_35dp"
        android:layout_height="@dimen/dim_35dp"
        android:background="@drawable/ic_arrow_right"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_1dp"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>